# rag-chat-storage-microsevice

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
app/: app.py
app/api/: __init__.py  chat_session.py  healthcheck.py
app/core/: config.py  enums.py  logger.py  middlewares.py  models.py  pagination.py  types.py  utils.py
app/core/dependencies/: __init__.py  auth.py  db.py
app/core/exceptions/: __init__.py  error_handlers.py  exceptions.py
app/core/helpers/: db.py
app/core/mixins/: repository.py  service.py
app/models/: __init__.py  chat_message.py  chat_session.py
app/repositories/: chat_message.py  chat_session.py
app/schemas/: chat_message.py  chat_session.py
app/services/: chat_message.py  chat_session.py
migrations/: __init__.py  env.py
migrations/versions/: 2025-10-23-1902_add_chat_session_and_chat_message_tables.py
tests/: conftest.py
tests/factories/: __init__.py  chat_message.py  chat_session.py
tests/factories/base/: __init__.py  base.py  sqlalchemy.py
tests/fixtures/: __init__.py  chat_message.py  chat_session.py
tests/integration/api/chat_session/: test_create.py  test_create_message.py  test_delete.py  test_get.py  test_get_all_by_user.py  test_get_messages.py  test_update.py
tests/integration/api/health_check/: test_perform_healthcheck.py
tests/unit/: fixtures.py
tests/unit/repository/: test_create.py  test_delete.py  test_get.py  test_get_all.py  test_update.py
